prod and testbook change

--- a/src/main/resources/templates/testbook.html
+++ b/src/main/resources/templates/testbook.html
@@ -207,7 +207,7 @@
              
             
             <div class="btn-box">
-              <button  th:if="${successBooking}" type="submit" class="btn" id="popup">Submit Now</button>
+              <button   type="submit" class="btn" id="popup">Submit Now</button>
               
             </div>
             
