--- a/src/main/resources/templates/feedback.html
+++ b/src/main/resources/templates/feedback.html
@@ -47,6 +47,10 @@
 			.nav-link{
 				font-size: 19px!important;
 			}
+			
+			.layout_padding2 {
+			    padding: 25px 0;
+			}
 	</style>
 </head>
 
@@ -58,24 +62,7 @@
       <div class="header_top">
         <div class="container">
           <div class="contact_nav">
-            <a href="">
-              <i class="fa fa-phone" aria-hidden="true"></i>
-              <span>
-                Call : +01 123455678990
-              </span>
-            </a>
-            <a href="">
-              <i class="fa fa-envelope" aria-hidden="true"></i>
-              <span>
-                Email : demo@gmail.com
-              </span>
-            </a>
-            <a href="https://www.google.com/maps/dir//HOSPITAL+MORE,+TAMLUK,+PURBA+MEDINIPUR,+MEDINIPUR,+West+Bengal+721636/@22.2874998,87.835094,12z/data=!4m8!4m7!1m0!1m5!1m1!1s0x3a0294691f80c849:0x6290d9eadaa4b731!2m2!1d87.9174956!2d22.2875206?entry=ttu">
-              <i class="fa fa-map-marker" aria-hidden="true"></i>
-              <span>
-                Location
-              </span>
-            </a>
+            
           </div>
         </div>
       </div>
@@ -197,6 +184,120 @@
 
   <!-- info section -->
   
+  <section class="info_section ">
+    <div class="container">
+     
+        
+      <div class="info_bottom layout_padding2">
+        <div class="row info_main_row">
+          <div class="col-md-6 col-lg-3">
+            <h5>
+              Address
+            </h5>
+            <div class="info_contact">
+              <a href="https://www.google.com/maps/dir//HOSPITAL+MORE,+TAMLUK,+PURBA+MEDINIPUR,+MEDINIPUR,+West+Bengal+721636/@22.2874998,87.835094,12z/data=!4m8!4m7!1m0!1m5!1m1!1s0x3a0294691f80c849:0x6290d9eadaa4b731!2m2!1d87.9174956!2d22.2875206?entry=ttu">
+                <i class="fa fa-map-marker" aria-hidden="true"></i>
+                <span>
+                  Location
+                </span>
+              </a>
+              <a href="">
+                <i class="fa fa-phone" aria-hidden="true"></i>
+                <span>
+                  Call +01 1234567890
+                </span>
+              </a>
+              <a href="">
+                <i class="fa fa-envelope"></i>
+                <span>
+                  demo@gmail.com
+                </span>
+              </a>
+            </div>
+           
+          </div>
+          <div class="col-md-6 col-lg-3">
+            <div class="info_links">
+              <h5>
+                Useful link
+              </h5>
+              <div class="info_links_menu">
+                <a class="active" th:href="@{index}">
+                  Home
+                </a>
+                <a th:href="@{about}">
+                  About
+                </a>
+                <a th:href="@{gallary}">
+                  Gallary
+                </a>
+                <a th:href="@{feedback}">
+                  Contact us
+                </a>
+              </div>
+            </div>
+          </div>
+          
+          <div class="col-md-6 col-lg-3">
+            <div class="info_links">
+              <h5>
+                Domain
+              </h5>
+              <div class="info_links_menu">
+                 
+                  Medical
+                 <br>
+                 <br>
+                  Diagonastic test
+                
+               <br>
+                 <br>
+                  Pharmacy
+                
+                <br>
+                 <br>
+                  Medicine
+                
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-3">
+            <div class="info_post">
+              <h5>
+                LATEST POSTS
+              </h5>
+              <div class="post_box">
+                <div class="img-box">
+                  <img src="images/post1.jpg" alt="">
+                </div>
+                <p>
+                  Monitoring
+                </p>
+              </div>
+              <div class="post_box">
+                <div class="img-box">
+                  <img src="images/post3.jpg" alt="">
+                </div>
+                <p>
+                  Advicing
+                </p>
+              </div>
+             
+            </div>
+          </div>
+          
+              
+              
+            
+          
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- end info_section -->
+
+
+
   <!-- end info_section -->
 
 
@@ -204,11 +305,19 @@
   <footer class="footer_section">
     <div class="container">
       <p>
-        &copy; <span id="displayYear"></span> 
-        <a href="https://html.design/"></a>
+        &copy;  All Rights Reserved By
+        <a href="https://html.design/">Anindita Manna</a>
       </p>
     </div>
   </footer>
+
+  <!-- footer section -->
+  
+ 
+  
+  <!-- footer section -->
+
+  <!-- jQery -->
   <!-- footer section -->
   
 
