--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -41,6 +41,10 @@
 			.nav-link{
 				font-size: 19px!important;
 			}
+			
+			.layout_padding2 {
+			    padding: 25px 0;
+			}
 	</style>
 
 </head>
@@ -52,24 +56,7 @@
             <div class="header_top">
                 <div class="container">
                     <div class="contact_nav">
-                        <a href="">
-                            <i class="fa fa-phone" aria-hidden="true"></i>
-                            <span>
-                                Call : +01 123455678990
-                            </span>
-                        </a>
-                        <a href="">
-                            <i class="fa fa-envelope" aria-hidden="true"></i>
-                            <span>
-                                Email : demo@gmail.com
-                            </span>
-                        </a>
-                        <a href="">
-                            <i class="fa fa-map-marker" aria-hidden="true"></i>
-                            <span>
-                                Location
-                            </span>
-                        </a>
+                       
                     </div>
                 </div>
             </div>
@@ -335,6 +322,10 @@
 
             </div>
         </div>
+        
+        
+       
+
 
 </body>
 
