--- a/src/main/resources/templates/feedback.html
+++ b/src/main/resources/templates/feedback.html
@@ -222,7 +222,7 @@
                 Useful link
               </h5>
               <div class="info_links_menu">
-                <a class="active" th:href="@{index}">
+                <a th:href="@{index}">
                   Home
                 </a>
                 <a th:href="@{about}">
@@ -231,7 +231,7 @@
                 <a th:href="@{gallary}">
                   Gallary
                 </a>
-                <a th:href="@{feedback}">
+                <a class="active"  th:href="@{feedback}">
                   Contact us
                 </a>
               </div>
