--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -84,8 +84,8 @@
                     </div>
                     
                     
-                    <button type="submit" id="submitButton">
-                        <span class="btnText">Next</span>
+                    <button type="submit" id="submitButton" disabled>
+                        <span class="btnText">Sign up</span>
                         <i class="uil uil-navigator"></i>
                     </button>
                 </div>
