--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -139,7 +139,7 @@
           <div class="detail-box">
             <div class="heading_container">
               <h2>
-                About <span>Hospital</span>
+                what is <span>Diagonastic test!</span>
               </h2>
             </div>
             <p>
@@ -195,10 +195,10 @@
                 Useful link
               </h5>
               <div class="info_links_menu">
-                <a class="active" th:href="@{index}">
+                <a  th:href="@{index}">
                   Home
                 </a>
-                <a th:href="@{about}">
+                <a class="active" th:href="@{about}">
                   About
                 </a>
                 <a th:href="@{gallary}">
